codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
• Waiting for 2 agents
  └ Robie [explorer] · model/effort unavailable
    Ada [reviewer] · model/effort unavailable


• Finished waiting
  └ Robie [explorer] · model/effort unavailable: Completed - Done
    Ada [reviewer] · model/effort unavailable: Running
