codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__named_account_picker_filtered.snap
---
source: tui/src/chatwidget/tests/account_picker_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
  Named accounts
  Choose the account for subsequent requests

  Travel
› Travel  other@example.com · ApiKey

  Press enter to confirm or esc to go back
