codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_compaction_progress.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "lines_to_single_string(cells.last().expect(\"status\"))"
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                          │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:                gpt-5.6-sol (reasoning low, summaries auto) │
│  Directory:            /tmp/project                                │
│  Permissions:          Read Only (Ask for approval)                │
│  Agents.md:            <none>                                      │
│  Collaboration mode:   Default                                     │
│                                                                    │
│  Token usage:          0 total  (0 input + 0 output)               │
│  Context window:       250K used / 950K                            │
│  Auto-compaction:      51% used                                    │
│  Limits:               data not available yet                      │
╰────────────────────────────────────────────────────────────────────╯
