codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__sub_agent_routing_main_chat_live_and_replay.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Started `/root/worker` · gpt-5.6-luna xhigh


• Interacted with `/root/worker` · gpt-6-astra high
